--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,12 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{zip,tgz}": ["@parcel/transformer-raw"]
-  }
+    "*.{zip,tgz}": [
+      "@parcel/transformer-raw"
+    ]
+  },
+  "resolvers": [
+    "@parcel/resolver-glob",
+    "..."
+  ]
 }
