--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html --port 3001",
     "build": "parcel build src/index.html",
     "test": "jest",
     "postbuild": "npm run msw:install",
@@ -17,41 +17,33 @@
   "author": "Alessandro Falezza",
   "license": "MIT",
   "dependencies": {
-    "@material/react-button": "^0.15.0",
-    "@material/react-card": "^0.15.0",
-    "@material/react-checkbox": "^0.15.0",
-    "@material/react-icon-button": "^0.15.0",
-    "@material/react-layout-grid": "^0.15.0",
-    "@material/react-list": "^0.15.0",
-    "@material/react-material-icon": "^0.15.0",
-    "@material/react-select": "^0.15.0",
-    "@material/react-tab": "^0.12.0",
-    "@material/react-tab-bar": "^0.12.0",
-    "@material/react-text-field": "^0.15.0",
-    "@material/react-typography": "^0.15.0",
-    "@types/react-router-dom": "^5.3.3",
-    "jest": "^28.1.1",
-    "material-components-web": "^13.0.0",
-    "moment": "^2.29.3",
-    "parcel": "^2.6.0",
-    "prettier": "^2.6.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.3.0",
-    "sass": "^1.43.4",
-    "typescript": "^4.7.3"
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.15",
+    "jest": "^29.5.0",
+    "moment": "^2.29.4",
+    "parcel": "^2.8.3",
+    "prettier": "^2.8.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "sass": "^1.60.0",
+    "typescript": "^5.0.3"
   },
   "devDependencies": {
-    "@parcel/config-default": "^2.6.0",
-    "@parcel/transformer-raw": "^2.6.0",
-    "@parcel/transformer-sass": "^2.6.0",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.40",
-    "@types/prettier": "^2.6.3",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
-    "@types/sass": "^1.43.0",
-    "msw": "^0.42.0",
+    "@parcel/config-default": "^2.8.3",
+    "@parcel/resolver-glob": "^2.8.3",
+    "@parcel/transformer-raw": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/sass": "^1.43.1",
+    "msw": "^1.2.1",
     "process": "^0.11.10"
   },
   "msw": {
