--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
+    "axios": "^0.27.2",
     "jest": "^29.5.0",
     "moment": "^2.29.4",
     "parcel": "^2.8.3",
