--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "start": "parcel src/index.html --port 3100",
+    "start": "parcel src/index.html --port 3000",
     "build": "parcel build src/index.html",
     "test": "jest",
     "api:generate": "openapi-generator-cli generate --enable-post-process-file -i api.yml -t src/generated/templates/ -g typescript-axios -o src/generated/axios/",
@@ -25,6 +25,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "axios": "^0.27.2",
+    "http-proxy-middleware": "^2.0.6",
     "jest": "^29.5.0",
     "moment": "^2.29.4",
     "parcel": "^2.8.3",
