--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jest": "^29.5.0",
     "moment": "^2.29.4",
+    "notistack": "^3.0.1",
     "parcel": "^2.8.3",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
