--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
+    "@mui/x-date-pickers": "^6.5.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.7",
     "http-proxy-middleware": "^2.0.6",
     "jest": "^29.5.0",
     "moment": "^2.29.4",
