feat: add clean script to package.json and update dependencies
style: migrate from @import to @use for SCSS variables in multiple components

fix: update logo import in Header menu component to use URL constructor for better path resolution

--- a/.parcelrc
+++ b/.parcelrc
@@ -5,6 +5,9 @@
       "@parcel/transformer-raw"
     ]
   },
+  "optimizers": {
+    "*.{jpg,jpeg,png}": []
+  },
   "resolvers": [
     "@parcel/resolver-glob",
     "..."
