--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "parcel src/index.html --port 3000",
     "build": "parcel build src/index.html",
+    "clean": "rm -rf dist && rm -rf .parcel-cache",
     "test": "jest",
     "api:generate": "openapi-generator-cli generate --enable-post-process-file -i api.yml -t src/generated/templates/ -g typescript-axios -o src/generated/axios/",
     "api:version": "node ./scripts/api-version.js",
@@ -20,40 +21,40 @@
   "author": "Filippo Dolci",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^5.16.14",
-    "@mui/material": "^5.16.14",
-    "@mui/x-date-pickers": "^6.20.2",
-    "axios": "^0.28.1",
-    "dayjs": "^1.11.13",
-    "http-proxy-middleware": "^2.0.7",
-    "jest": "^29.7.0",
-    "moment": "^2.30.1",
-    "notistack": "^3.0.2",
-    "parcel": "^2.13.3",
-    "prettier": "^2.8.8",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.0",
-    "sass": "^1.85.1",
-    "typescript": "^5.8.2"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/icons-material": "5.17.1",
+    "@mui/material": "5.17.1",
+    "@mui/x-date-pickers": "6.20.2",
+    "axios": "0.30.0",
+    "dayjs": "1.11.13",
+    "http-proxy-middleware": "2.0.9",
+    "jest": "29.7.0",
+    "moment": "2.30.1",
+    "notistack": "3.0.2",
+    "prettier": "2.8.8",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.30.1",
+    "typescript": "5.8.3"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.17.0",
-    "@parcel/config-default": "^2.13.3",
-    "@parcel/resolver-glob": "^2.13.3",
-    "@parcel/transformer-raw": "^2.13.3",
-    "@parcel/transformer-sass": "^2.13.3",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^18.19.78",
-    "@types/prettier": "^2.7.3",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/sass": "^1.45.0",
-    "msw": "^1.3.5",
-    "process": "^0.11.10"
+    "@openapitools/openapi-generator-cli": "2.20.2",
+    "@parcel/config-default": "^2.15.2",
+    "@parcel/resolver-glob": "^2.15.2",
+    "@parcel/transformer-raw": "^2.15.2",
+    "@parcel/transformer-sass": "^2.15.2",
+    "@types/jest": "29.5.14",
+    "@types/node": "18.19.110",
+    "@types/prettier": "2.7.3",
+    "@types/react": "18.3.23",
+    "@types/react-dom": "18.3.7",
+    "@types/react-router-dom": "5.3.3",
+    "@types/sass": "1.45.0",
+    "msw": "1.3.5",
+    "parcel": "^2.12.0",
+    "process": "0.11.10",
+    "sass": "^1.89.1"
   },
   "msw": {
     "workerDirectory": "dist"
