--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "build:api": "npm run api:generate && npm run api:version",
     "postbuild": "npm run msw:install",
     "prestart": "npm run msw:install",
-    "msw:install": "msw init ./dist"
+    "msw:install": "msw init ./dist",
+    "cypress": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "test:e2e:headless": "start-server-and-test start http://localhost:3000 cypress:run"
   },
   "author": "Filippo Dolci",
   "license": "MIT",
@@ -51,10 +55,12 @@
     "@types/react-dom": "18.3.7",
     "@types/react-router-dom": "5.3.3",
     "@types/sass": "1.45.0",
+    "cypress": "^14.4.1",
     "msw": "1.3.5",
     "parcel": "^2.12.0",
     "process": "0.11.10",
-    "sass": "^1.89.1"
+    "sass": "^1.89.1",
+    "start-server-and-test": "^2.0.12"
   },
   "msw": {
     "workerDirectory": "dist"
